--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,13 +26,13 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/prompt-lab-be-dev:${{ github.sha }} .
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/prompt-lab-be-dev:${{ github.sha }}
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:${{ github.sha }} .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:${{ github.sha }}
 
     - name: Deploy to Cloud Run
       run: |
-        gcloud run deploy prompt-lab-be-dev \
-        --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/prompt-lab-be-dev:${{ github.sha }} \
+        gcloud run deploy test \
+        --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:${{ github.sha }} \
         --region asia-southeast1 \
         --platform managed \
         --allow-unauthenticated \
