--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: Build and Deploy to Cloud Run For Dev
 on:
   push:
     branches:
-      - backend/dev
+      - main
 
 jobs:
   build-and-deploy:
